# programproject_1

./: CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  conanfile.py
cmake/: FetchLib2.cmake  dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: programproject_test.cpp
